<resources>
    <string name="app_name">Metallica</string>
    <string name="action_settings">設置</string>

    <string name="str_english_word">單字</string>
    <string name="str_part_of_speech">詞性</string>
    <string name="str_chinese_meaning">意義</string>
    <string name="str_part_of_speech_and_chinese_meaning">意義</string>
    <string name="str_add_new_part_of_speech_and_chinese_meaning">新增單字意義</string>
    <string name="str_difficulty">難度</string>
    <string name="str_difficulty_0star">零星</string>
    <string name="str_difficulty_1star">一星</string>
    <string name="str_difficulty_2stars">二星</string>
    <string name="str_difficulty_3stars">三星</string>
    <string name="str_difficulty_4stars">四星</string>
    <string name="str_difficulty_5stars">五星</string>
    <string name="str_classification"/>
    <string name="str_insert_this_word_into_classifications_when_adding_word">將這個單字加入分類</string>
    <string name="str_remark">備註</string>

    <string name="str_adding_english_word_hint">Enter a word here.</string>
    <string name="str_adding_chinese_meaning_hint">What does it mean?</string>
    <string name="str_adding_remark_hint">Example sentences, notes, or anything you want to add.</string>

    <string name="str_cancel">取消</string>
    <string name="str_submit">送出</string>
    <string name="str_confirm">確認</string>
    <string name="str_add_new_word_or_classification_successfully">成功加入</string>
    <string name="str_edit_word_successfully">成功編輯</string>

    <string name="str_add_new_word">新增單字</string>
    <string name="str_add_new_classification">新增分類</string>
    <string name="str_group_name">名稱</string>

    <string name="str_error_when_inserting_data">在插入數據時發生錯誤。</string>
    <string name="str_unclassified">未分類</string>
    <string name="str_adding_group_name_hint">分類群組的名稱</string>
    <string name="str_select_classifications_when_adding_word">選擇分類</string>
    <string name="str_no_classification_yet">還沒有任何分類喔</string>
    <string name="str_or">或</string>

    <string name="str_move_to_unclassified">移至「未分類」</string>
    <string name="str_move_to_another_classification">移至其他分類</string>
    <string name="str_delete_permanently">永久刪除（無法復原）</string>
    <string name="str_words_deleting_methods">分類內的單字該如何處理呢？</string>
</resources>
