<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.WordAddingActivity">

    <!-- for entering the data of the new word -->
    <ScrollView
            android:layout_alignParentTop="true"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- english word -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/dim_general_margin"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/txtv_english_word_when_adding"
                        android:text="@string/str_english_word"
                        android:textSize="@dimen/dim_general_text_size"
                        android:layout_marginEnd="@dimen/dim_spacing_between_label_and_edit_text"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                <EditText
                        android:id="@+id/edt_english_word_when_adding"
                        android:hint="@string/str_adding_english_word_hint"
                        android:textSize="@dimen/dim_general_text_size"
                        android:inputType="text"
                        android:importantForAutofill="no"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- part of speech -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/dim_general_margin"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/txtv_part_of_speech_when_adding"
                        android:text="@string/str_part_of_speech"
                        android:textSize="@dimen/dim_general_text_size"
                        android:layout_marginEnd="@dimen/dim_spacing_between_label_and_edit_text"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spn_part_of_speech_when_adding"
                        android:spinnerMode="dropdown"
                        android:importantForAutofill="no"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- chinese meaning -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/dim_general_margin"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/txtv_chinese_meaning_when_adding"
                        android:text="@string/str_chinese_meaning"
                        android:textSize="@dimen/dim_general_text_size"
                        android:layout_marginEnd="@dimen/dim_spacing_between_label_and_edit_text"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                <EditText
                        android:id="@+id/edt_chinese_meaning_when_adding"
                        android:hint="@string/str_adding_chinese_meaning_hint"
                        android:textSize="@dimen/dim_general_text_size"
                        android:inputType="text"
                        android:importantForAutofill="no"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- remark -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/dim_general_margin"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/txtv_remark_when_adding"
                        android:text="@string/str_remark"
                        android:textSize="@dimen/dim_general_text_size"
                        android:layout_marginEnd="@dimen/dim_spacing_between_label_and_edit_text"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                <EditText
                        android:id="@+id/edt_remark_when_adding"
                        android:hint="@string/str_adding_remark_hint"
                        android:textSize="@dimen/dim_general_text_size"
                        android:inputType="textMultiLine"
                        android:importantForAutofill="no"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- cancel & submit buttons -->
    <LinearLayout
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/btn_cancel_when_adding"
                android:text="@string/str_cancel"
                android:textSize="@dimen/dim_button_bar_text_size"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:id="@+id/btn_submit_when_adding"
                android:text="@string/str_submit"
                android:textSize="@dimen/dim_button_bar_text_size"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>