<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.WordAddingActivity">

    <!-- for entering the data of the new classification -->
    <ScrollView
            android:layout_alignParentTop="true"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- group name -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/dim_general_margin"
                    android:weightSum="15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/txtv_group_name_when_adding_classification"
                        android:text="@string/str_group_name"
                        android:textSize="@dimen/dim_general_text_size"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                <EditText
                        android:id="@+id/edt_group_name_when_adding_classification"
                        android:hint="@string/str_adding_group_name_hint"
                        android:textSize="@dimen/dim_general_text_size"
                        android:inputType="text"
                        android:importantForAutofill="no"
                        android:layout_weight="13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- cancel & submit buttons -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarStyle">

                <Button
                        android:id="@+id/btn_cancel_when_adding_classification"
                        android:text="@string/str_cancel"
                        android:textSize="@dimen/dim_button_bar_text_size"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle" />

                <Button
                        android:id="@+id/btn_submit_when_adding_classification"
                        android:text="@string/str_submit"
                        android:textSize="@dimen/dim_button_bar_text_size"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>